added dorny/test-reporter action to WF

--- a/.github/workflows/niffler-auth-prod.yaml
+++ b/.github/workflows/niffler-auth-prod.yaml
@@ -38,7 +38,7 @@ jobs:
           echo "### niffler-auth version will be used: ${{ env.AUTH_VER }} ###"
           echo "### java version ###"
           java -version
-          bash ./gradlew :niffler-auth:jib -x :niffler-e-2-e-tests:test || exit 1
+          bash ./gradlew :niffler-auth:jib -x :niffler-e-2-e-tests:test -Duser.timezone=UTC || exit 1
           docker compose -f docker-compose.ci.yml pull auth.niffler.dc
           docker compose -f docker-compose.ci.yml stop auth.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps auth.niffler.dc
           docker system prune -a -f
