--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -28,20 +28,33 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
       - name: Build backends
+        id: build
         run: |
           ./gradlew jibDockerBuild -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
-      - name: Upload backends HTML test reports
-        if: always()
-        continue-on-error: true
-        uses: actions/upload-artifact@v4
+      - name: Report test results
+        uses: dorny/test-reporter@v2
+        if: always() && steps.build.outcome != 'skipped'
         with:
-          name: test-reports
-          path: |
-            niffler-auth/build/reports/tests/test
-            niffler-currency/build/reports/tests/test
-            niffler-gateway/build/reports/tests/test
-            niffler-spend/build/reports/tests/test
-            niffler-userdata/build/reports/tests/test
+          name: Unit & Integration tests
+          path: '**/build/test-results/test/TEST-*.xml'
+          reporter: java-junit
+      - name: Add comment to PR with link to unit tests results
+        if: always() && steps.build.outcome != 'skipped'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const buildStatus = '${{ steps.build.outcome }}'
+            const reportUrl = 'https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            const message = buildStatus === 'success'
+              ? `✅ UNIT & INTEGRATION TESTS PASSED ✅\nSee [tests JUnit report](${reportUrl})`
+              : `🔴 UNIT & INTEGRATION TESTS FAILED 🔴\nSee [tests JUnit report](${reportUrl})`
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: message
+            })
       - name: Pull browsers
         run: |
           docker pull twilio/selenoid:chrome_stable_135
@@ -67,7 +80,7 @@ jobs:
             exit 1
           fi
       - name: Add comment to PR with link to allure
-        if: always()
+        if: always() && steps.e2e.outcome != 'skipped'
         uses: actions/github-script@v7
         with:
           script: |
@@ -75,8 +88,8 @@ jobs:
             const reportUrl = 'https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/niffler-ng/reports/latest/index.html'
             const historyUrl = 'https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/niffler-ng'
             const message = exitCode == '0' ?
-              `✅ TEST RUN PASSED ✅ There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})` :
-              `🔴 TEST RUN FAILED 🔴 There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})`
+              `✅ E2E TEST RUN PASSED ✅ There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})` :
+              `🔴 E2E TEST RUN FAILED 🔴 There is the [report](${reportUrl})\n🕓 All reports [history](${historyUrl})`
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -144,7 +157,7 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew :niffler-auth:jib -x :niffler-e-2-e-tests:test
+          bash ./gradlew :niffler-auth:jib -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
           docker compose -f docker-compose.ci.yml pull auth.niffler.dc
           docker compose -f docker-compose.ci.yml stop auth.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps auth.niffler.dc
           docker system prune -a -f
@@ -155,7 +168,7 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew :niffler-currency:jib -x :niffler-e-2-e-tests:test
+          bash ./gradlew :niffler-currency:jib -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
           docker compose -f docker-compose.ci.yml pull currency.niffler.dc
           docker compose -f docker-compose.ci.yml stop currency.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps currency.niffler.dc
           docker system prune -a -f
@@ -166,7 +179,7 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew :niffler-gateway:jib -x :niffler-e-2-e-tests:test
+          bash ./gradlew :niffler-gateway:jib -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
           docker compose -f docker-compose.ci.yml pull gateway.niffler.dc
           docker compose -f docker-compose.ci.yml stop gateway.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps gateway.niffler.dc
           docker system prune -a -f
@@ -177,7 +190,7 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew :niffler-spend:jib -x :niffler-e-2-e-tests:test
+          bash ./gradlew :niffler-spend:jib -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
           docker compose -f docker-compose.ci.yml pull spend.niffler.dc
           docker compose -f docker-compose.ci.yml stop spend.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps spend.niffler.dc
           docker system prune -a -f
@@ -188,7 +201,7 @@ jobs:
         working-directory: ./
         run: |
           pwd
-          bash ./gradlew :niffler-userdata:jib -x :niffler-e-2-e-tests:test
+          bash ./gradlew :niffler-userdata:jib -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
           docker compose -f docker-compose.ci.yml pull userdata.niffler.dc
           docker compose -f docker-compose.ci.yml stop userdata.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps userdata.niffler.dc
           docker system prune -a -f
