--- a/.github/workflows/niffler-spend-prod.yaml
+++ b/.github/workflows/niffler-spend-prod.yaml
@@ -38,7 +38,7 @@ jobs:
           echo "### niffler-spend version will be used: ${{ env.SPEND_VER }} ###"
           echo "### java version ###"
           java -version
-          bash ./gradlew :niffler-spend:jib -x :niffler-e-2-e-tests:test || exit 1
+          bash ./gradlew :niffler-spend:jib -x :niffler-e-2-e-tests:test -Duser.timezone=UTC || exit 1
           docker compose -f docker-compose.ci.yml pull spend.niffler.dc
           docker compose -f docker-compose.ci.yml stop spend.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps spend.niffler.dc
           docker system prune -a -f
