--- a/niffler-spend/build.gradle
+++ b/niffler-spend/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '2.1.2'
+version = '2.2.0'
 
 dependencies {
     implementation project(':niffler-grpc-common')
@@ -22,12 +22,14 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
     implementation "org.flywaydb:flyway-core:${project.ext.flywayVersion}"
     implementation "org.flywaydb:flyway-database-postgresql:${project.ext.flywayVersion}"
+    implementation "org.apache.commons:commons-csv:${project.ext.apacheCsvVersion}"
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
     compileOnly "org.projectlombok:lombok:${project.ext.lombokVersion}"
     runtimeOnly "org.postgresql:postgresql:${project.ext.postgresDriverVersion}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation "com.h2database:h2:${project.ext.h2Version}"
+    testImplementation "com.opencsv:opencsv:5.10"
     testImplementation "org.mockito:mockito-core:${project.ext.mockitoVersion}"
     testImplementation("org.mockito:mockito-junit-jupiter:${project.ext.mockitoVersion}") {
         exclude group: "org.junit.jupiter"
@@ -63,15 +65,10 @@ jib {
     }
 }
 
-tasks.jib.dependsOn test
 tasks.jibDockerBuild.dependsOn test
 
 tasks.register('printVersion') {
     doLast {
         println project.version
     }
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
