--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -88,6 +88,7 @@ oauth2:
   web-client-id: 'client'
   mobile-client-id: 'mobile-client'
   mobile-custom-scheme: 'app://'
+  android-app-uri: 'ru.niffler_android'
 ---
 spring:
   config:
@@ -112,6 +113,7 @@ oauth2:
   web-client-id: 'client'
   mobile-client-id: 'mobile-client'
   mobile-custom-scheme: 'app://'
+  android-app-uri: 'ru.niffler_android'
 ---
 spring:
   config:
@@ -140,6 +142,7 @@ oauth2:
   web-client-id: ${web-client-id}
   mobile-client-id: ${mobile-client-id}
   mobile-custom-scheme: ${mobile-custom-scheme}
+  android-app-uri: ${android-app-uri}
 ---
 spring:
   config:
@@ -168,4 +171,5 @@ oauth2:
   web-client-id: ${web-client-id}
   mobile-client-id: ${mobile-client-id}
   mobile-custom-scheme: ${mobile-custom-scheme}
+  android-app-uri: ${android-app-uri}
 ---
