--- a/build.gradle
+++ b/build.gradle
@@ -30,14 +30,14 @@ subprojects {
         springVaultVersion = '4.2.1'
         springOpenApiVersion = '2.8.6'
         postgresDriverVersion = '42.7.5'
-        flywayVersion = '11.6.0'
+        flywayVersion = '11.7.2'
         springGrpcVersion = '3.1.0.RELEASE'
         springGraphqlDateTimeVersion = '6.0.0'
-        springSecurityTestVersion = '6.4.4'
+        springSecurityTestVersion = '6.4.5'
         jakartaJaxbVersion = '4.0.2'
         wsdl4jVersion = '1.6.3'
         protobufVersion = '4.30.2'
-        grpcVersion = '1.71.0'
+        grpcVersion = '1.72.0'
         thumbnailatorVersion = '0.4.20'
         apacheCsvVersion = '1.14.0'
         h2Version = '2.3.232'
@@ -66,7 +66,7 @@ subprojects {
 dependencyUpdates {
     resolutionStrategy {
         componentSelection {
-            configureEach { ComponentSelection selection ->
+            all { ComponentSelection selection ->
                 boolean isUnstable = ['alpha', 'beta', 'rc', 'm', 'snapshot'].any { keyword ->
                     selection.candidate.version.toLowerCase().contains(keyword)
                 }
@@ -77,4 +77,3 @@ dependencyUpdates {
         }
     }
 }
-
