--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -9,6 +9,8 @@ server:
       timeout: 60m
       cookie:
         name: JSESSIONID
+        max-age: 3600
+      tracking-modes: cookie
 
 spring:
   application:
@@ -30,7 +32,7 @@ spring:
     schemas: public
     locations: classpath:db/migration/niffler-auth
   session:
-    store-type: jdbc
+    timeout: 60m
   jpa:
     hibernate:
       ddl-auto: none
