--- a/niffler-currency/src/main/resources/application.yaml
+++ b/niffler-currency/src/main/resources/application.yaml
@@ -35,7 +35,9 @@ spring:
     show-sql: false
     generate-ddl: true
     open-in-view: false
-
+  cloud:
+    compatibility-verifier:
+      enabled: false
 logging:
   level:
     root: INFO
