--- a/niffler-gateway/src/main/resources/application-test.yaml
+++ b/niffler-gateway/src/main/resources/application-test.yaml
@@ -6,15 +6,15 @@ spring:
       - 'org.springframework.cloud.vault.config.VaultReactiveAutoConfiguration'
 
 niffler-currency:
-  base-uri: 'http://127.0.0.1:8091'
+  base-uri: 'http://localhost:8091'
 niffler-userdata:
-  base-uri: 'http://127.0.0.1:8089'
+  base-uri: 'http://localhost:8089'
 niffler-spend:
-  base-uri: 'http://127.0.0.1:8093'
+  base-uri: 'http://localhost:8093'
 niffler-front:
-  base-uri: 'http://127.0.0.1:3000'
+  base-uri: 'http://localhost:3000'
 niffler-gateway:
-  base-uri: 'http://127.0.0.1:8090'
+  base-uri: 'http://localhost:8090'
 
 grpc:
   client:
