--- a/niffler-ng-gql-client/.env
+++ b/niffler-ng-gql-client/.env
@@ -1,5 +1,5 @@
-VITE_AUTH_URL=http://127.0.0.1:9000
-VITE_API_URL=http://127.0.0.1:8090
-VITE_FRONT_HOST=127.0.0.1
-VITE_FRONT_URL=http://127.0.0.1:3000
+VITE_AUTH_URL=http://localhost:9000
+VITE_API_URL=http://localhost:8090
+VITE_FRONT_HOST=localhost
+VITE_FRONT_URL=http://localhost:3000
 VITE_CLIENT_ID=client
