--- a/niffler-spend/src/main/resources/application.yaml
+++ b/niffler-spend/src/main/resources/application.yaml
@@ -30,7 +30,9 @@ spring:
     show-sql: false
     generate-ddl: true
     open-in-view: false
-
+  cloud:
+    compatibility-verifier:
+      enabled: false
 logging:
   level:
     root: INFO
@@ -60,9 +62,9 @@ grpc:
       negotiationType: PLAINTEXT
 
 niffler-currency:
-  base-uri: 'http://127.0.0.1:8091'
+  base-uri: 'http://localhost:8091'
 niffler-userdata:
-  base-uri: 'http://127.0.0.1:8089'
+  base-uri: 'http://localhost:8089'
 ---
 spring:
   config:
