--- a/niffler-userdata/src/main/resources/application.yaml
+++ b/niffler-userdata/src/main/resources/application.yaml
@@ -30,7 +30,9 @@ spring:
     show-sql: false
     generate-ddl: true
     open-in-view: false
-
+  cloud:
+    compatibility-verifier:
+      enabled: false
 logging:
   level:
     root: INFO
@@ -59,7 +61,7 @@ spring:
     username: postgres
     password: secret
 niffler-userdata:
-  base-uri: 'http://127.0.0.1:8089'
+  base-uri: 'http://localhost:8089'
 ---
 spring:
   config:
