--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -61,6 +61,9 @@ jobs:
       - name: Get the last commit message
         run: |
           echo "HEAD_COMMIT_MESSAGE=$(git show -s --format=%s)" >> $GITHUB_ENV
+      - name: Prepare screenshot dir
+        run: |
+          mkdir -p niffler-e-2-e-tests/.screen-output/screenshots/selenoid
       - name: Run e2e-tests
         id: e2e
         run: |
@@ -79,6 +82,15 @@ jobs:
             echo "Tests failed!"
             exit 1
           fi
+      - name: Upload screenshots artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-screenshots-${{ github.run_id }}
+          path: |
+            niffler-e-2-e-tests/.screen-output/screenshots/selenoid/**/*.png
+          if-no-files-found: warn
+          retention-days: 14
       - name: Add comment to PR with link to allure
         if: always() && steps.e2e.outcome != 'skipped'
         uses: actions/github-script@v7
