--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ build
 !gradle/wrapper/gradle-wrapper.properties
 !**/src/main/**/build/
 !**/src/test/**/build/
+/secret/**
 
 ### STS ###
 .apt_generated
