--- a/niffler-userdata/build.gradle
+++ b/niffler-userdata/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'guru.qa'
-version = '2.1.4'
+version = '2.2.0'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -17,6 +17,7 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-vault-config:${project.ext.springVaultVersion}"
     implementation "org.flywaydb:flyway-core:${project.ext.flywayVersion}"
     implementation "org.flywaydb:flyway-database-postgresql:${project.ext.flywayVersion}"
+    implementation "com.google.firebase:firebase-admin:${project.ext.firebaseVersion}"
     implementation "wsdl4j:wsdl4j:${project.ext.wsdl4jVersion}"
     implementation "net.coobird:thumbnailator:${project.ext.thumbnailatorVersion}"
     annotationProcessor "org.projectlombok:lombok:${project.ext.lombokVersion}"
