--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ subprojects {
         springGrpcVersion = '3.1.0.RELEASE'
         springGraphqlDateTimeVersion = '6.0.0'
         springSecurityTestVersion = '6.5.3'
+        firebaseVersion = '9.5.0'
         jakartaJaxbVersion = '4.0.2'
         wsdl4jVersion = '1.6.3'
         protobufVersion = '4.32.0'
