--- a/niffler-userdata/src/main/resources/application.yaml
+++ b/niffler-userdata/src/main/resources/application.yaml
@@ -62,6 +62,8 @@ spring:
     password: secret
 niffler-userdata:
   base-uri: 'http://localhost:8089'
+firebase:
+  path: ${GOOGLE_APPLICATION_CREDENTIALS}
 ---
 spring:
   config:
@@ -108,6 +110,8 @@ spring:
     password: ${db.password}
 niffler-userdata:
   base-uri: ${niffler-userdata.url}
+firebase:
+  config: ${firebase.key}
 ---
 spring:
   config:
@@ -133,4 +137,6 @@ spring:
     password: ${db.password}
 niffler-userdata:
   base-uri: ${niffler-userdata.url}
+firebase:
+  config: ${firebase.key}
 ---
