--- a/niffler-ng-gql-client/.env.prod
+++ b/niffler-ng-gql-client/.env.prod
@@ -3,3 +3,10 @@ VITE_API_URL=https://api.niffler.qa.guru
 VITE_FRONT_HOST=niffler.qa.guru
 VITE_FRONT_URL=https://niffler.qa.guru
 VITE_CLIENT_ID=client
+VITE_FIREBASE_API_KEY=AIzaSyDEtu5oECQq5s8PU--l22YZbt8ck-fB9sI
+VITE_FIREBASE_AUTH_DOMAIN=niffler-ea54f.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=niffler-ea54f
+VITE_FIREBASE_STORAGE_BUCKET=niffler-ea54f.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=641444169058
+VITE_FIREBASE_APP_ID=1:641444169058:web:045b5f13587012db84983b
+VITE_FIREBASE_VAPID_KEY=BCM_HWl_0aD7NKgR51QXnjCeg8uGvSZK07MpS9FxhLjOm0QXfKtkbwNzvnLH_X08b379Hly4xJSVl0eZKW-4hSM
