--- a/niffler-auth/src/main/resources/application.yaml
+++ b/niffler-auth/src/main/resources/application.yaml
@@ -61,6 +61,7 @@ logging:
     org.springframework.web.cors: INFO
     org.springframework.security.web.csrf: INFO
     org.springframework.security.web.authentication.logout: INFO
+    org.springframework.security.web.webauthn: TRACE
     org.springframework.security: INFO
     org.springframework.web.servlet.handler: INFO
     org.springframework.web.servlet.DispatcherServlet: INFO
@@ -96,6 +97,8 @@ oauth2:
   mobile-client-id: 'mobile-client'
   mobile-custom-scheme: 'app://'
   android-app-uri: 'ru.niffler_android'
+webauth:
+  enabled: true
 ---
 spring:
   config:
@@ -122,6 +125,8 @@ oauth2:
   mobile-client-id: 'mobile-client'
   mobile-custom-scheme: 'app://'
   android-app-uri: 'ru.niffler_android'
+webauth:
+  enabled: false
 ---
 spring:
   config:
@@ -152,6 +157,8 @@ oauth2:
   mobile-client-id: ${mobile-client-id}
   mobile-custom-scheme: ${mobile-custom-scheme}
   android-app-uri: ${android-app-uri}
+webauth:
+  enabled: true
 ---
 spring:
   config:
@@ -182,4 +189,6 @@ oauth2:
   mobile-client-id: ${mobile-client-id}
   mobile-custom-scheme: ${mobile-custom-scheme}
   android-app-uri: ${android-app-uri}
+webauth:
+  enabled: true
 ---
