--- a/niffler-userdata/src/main/resources/application.yaml
+++ b/niffler-userdata/src/main/resources/application.yaml
@@ -62,6 +62,9 @@ spring:
     password: secret
 niffler-userdata:
   base-uri: 'http://localhost:8089'
+firebase:
+  enabled: true
+  path: ${GOOGLE_APPLICATION_CREDENTIALS}
 ---
 spring:
   config:
@@ -83,6 +86,8 @@ spring:
     password: secret
 niffler-userdata:
   base-uri: 'http://userdata.niffler.dc:8089'
+firebase:
+  enabled: false
 ---
 spring:
   config:
@@ -108,6 +113,9 @@ spring:
     password: ${db.password}
 niffler-userdata:
   base-uri: ${niffler-userdata.url}
+firebase:
+  enabled: true
+  config: ${firebase.key}
 ---
 spring:
   config:
@@ -133,4 +141,7 @@ spring:
     password: ${db.password}
 niffler-userdata:
   base-uri: ${niffler-userdata.url}
+firebase:
+  enabled: true
+  config: ${firebase.key}
 ---
