--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,112 +5,112 @@ on:
     types: [ opened, reopened, synchronize ]
 
 jobs:
-#  e2e-tests:
-#    runs-on: ubuntu-latest
-#    env:
-#      PROFILE: docker
-#      PREFIX: qaguru
-#      ARCH: amd64
-#      FRONT: niffler-ng-client
-#      COMPOSE_PROFILES: test
-#      ALLURE_DOCKER_API: ${{ secrets.ALLURE_DOCKER_API }}
-#      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      BUILD_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-#      EXECUTION_TYPE: github
-#    steps:
-#      - name: Checkout repository
-#        uses: actions/checkout@v4
-#        with:
-#          ref: ${{ env.GITHUB_SHA }}
-#      - name: Set up JDK 21
-#        uses: actions/setup-java@v4
-#        with:
-#          java-version: '21'
-#          distribution: 'temurin'
-#      - name: Build backends
-#        id: build
-#        run: |
-#          ./gradlew jibDockerBuild -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
-#      - name: Report test results
-#        uses: dorny/test-reporter@v2
-#        if: always() && steps.build.outcome != 'skipped'
-#        with:
-#          name: Unit & Integration tests
-#          path: '**/build/test-results/test/TEST-*.xml'
-#          reporter: java-junit
-#          badge-title: 'unit & integration tests'
-#      - name: Add comment to PR with link to unit tests results
-#        if: always() && steps.build.outcome != 'skipped'
-#        uses: actions/github-script@v7
-#        with:
-#          script: |
-#            const buildStatus = '${{ steps.build.outcome }}'
-#            const message = buildStatus === 'success'
-#              ? `✅ UNIT & INTEGRATION TESTS PASSED`
-#              : `🔴 UNIT & INTEGRATION TESTS FAILED`
-#
-#            github.rest.issues.createComment({
-#              issue_number: context.issue.number,
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              body: message
-#            })
-#      - name: Pull browsers
-#        run: |
-#          docker pull twilio/selenoid:chrome_stable_140
-#      - name: Get the last commit message
-#        run: |
-#          echo "HEAD_COMMIT_MESSAGE=$(git show -s --format=%s)" >> $GITHUB_ENV
-#      - name: Prepare screenshot dir
-#        run: |
-#          mkdir -p niffler-e-2-e-tests/.screen-output/screenshots/selenoid
-#      - name: Run e2e-tests
-#        id: e2e
-#        run: |
-#          : # run e2e tests
-#          docker compose up -d
-#          docker ps -a
-#          docker wait niffler-e-2-e
-#          exit_code=$(docker inspect -f '{{.State.ExitCode}}' niffler-e-2-e)
-#          echo "E2E_EXIT_CODE=$exit_code" >> $GITHUB_OUTPUT
-#          echo "### Test logs ###"
-#          docker logs niffler-e-2-e
-#          if [ "$exit_code" -eq "0" ]; then
-#            echo "Tests passed successfully!"
-#            exit 0
-#          else
-#            echo "Tests failed!"
-#            exit 1
-#          fi
-#      - name: Upload screenshots artifact
-#        if: always()
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: e2e-screenshots-${{ github.run_id }}
-#          path: |
-#            niffler-e-2-e-tests/.screen-output/screenshots/selenoid/**/*.png
-#          if-no-files-found: warn
-#          retention-days: 14
-#      - name: Add comment to PR with link to allure
-#        if: always() && steps.e2e.outcome != 'skipped'
-#        uses: actions/github-script@v7
-#        with:
-#          script: |
-#            const exitCode = ${{ steps.e2e.outputs.E2E_EXIT_CODE }}
-#            const reportUrl = 'https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/niffler-ng/reports/latest/index.html'
-#            const historyUrl = 'https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/niffler-ng'
-#            const message = exitCode == '0' ?
-#              `✅ E2E TEST RUN PASSED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})` :
-#              `🔴 E2E TEST RUN FAILED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})`
-#            github.rest.issues.createComment({
-#              issue_number: context.issue.number,
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              body: message
-#            })
-#
+  e2e-tests:
+    runs-on: ubuntu-latest
+    env:
+      PROFILE: docker
+      PREFIX: qaguru
+      ARCH: amd64
+      FRONT: niffler-ng-client
+      COMPOSE_PROFILES: test
+      ALLURE_DOCKER_API: ${{ secrets.ALLURE_DOCKER_API }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      BUILD_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      EXECUTION_TYPE: github
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ env.GITHUB_SHA }}
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Build backends
+        id: build
+        run: |
+          ./gradlew jibDockerBuild -x :niffler-e-2-e-tests:test -Duser.timezone=UTC
+      - name: Report test results
+        uses: dorny/test-reporter@v2
+        if: always() && steps.build.outcome != 'skipped'
+        with:
+          name: Unit & Integration tests
+          path: '**/build/test-results/test/TEST-*.xml'
+          reporter: java-junit
+          badge-title: 'unit & integration tests'
+      - name: Add comment to PR with link to unit tests results
+        if: always() && steps.build.outcome != 'skipped'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const buildStatus = '${{ steps.build.outcome }}'
+            const message = buildStatus === 'success'
+              ? `✅ UNIT & INTEGRATION TESTS PASSED`
+              : `🔴 UNIT & INTEGRATION TESTS FAILED`
+
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: message
+            })
+      - name: Pull browsers
+        run: |
+          docker pull twilio/selenoid:chrome_stable_140
+      - name: Get the last commit message
+        run: |
+          echo "HEAD_COMMIT_MESSAGE=$(git show -s --format=%s)" >> $GITHUB_ENV
+      - name: Prepare screenshot dir
+        run: |
+          mkdir -p niffler-e-2-e-tests/.screen-output/screenshots/selenoid
+      - name: Run e2e-tests
+        id: e2e
+        run: |
+          : # run e2e tests
+          docker compose up -d
+          docker ps -a
+          docker wait niffler-e-2-e
+          exit_code=$(docker inspect -f '{{.State.ExitCode}}' niffler-e-2-e)
+          echo "E2E_EXIT_CODE=$exit_code" >> $GITHUB_OUTPUT
+          echo "### Test logs ###"
+          docker logs niffler-e-2-e
+          if [ "$exit_code" -eq "0" ]; then
+            echo "Tests passed successfully!"
+            exit 0
+          else
+            echo "Tests failed!"
+            exit 1
+          fi
+      - name: Upload screenshots artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: e2e-screenshots-${{ github.run_id }}
+          path: |
+            niffler-e-2-e-tests/.screen-output/screenshots/selenoid/**/*.png
+          if-no-files-found: warn
+          retention-days: 14
+      - name: Add comment to PR with link to allure
+        if: always() && steps.e2e.outcome != 'skipped'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const exitCode = ${{ steps.e2e.outputs.E2E_EXIT_CODE }}
+            const reportUrl = 'https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/niffler-ng/reports/latest/index.html'
+            const historyUrl = 'https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/niffler-ng'
+            const message = exitCode == '0' ?
+              `✅ E2E TEST RUN PASSED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})` :
+              `🔴 E2E TEST RUN FAILED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})`
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: message
+            })
+
   collect-versions:
-#    needs: e2e-tests
+    needs: e2e-tests
     uses: ./.github/workflows/versions.yml
     with:
       runner: niffler-stage-runner
