--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -100,8 +100,8 @@ jobs:
             const reportUrl = 'https://allure.niffler-stage.qa.guru/api/allure-docker-service/projects/niffler-ng/reports/latest/index.html'
             const historyUrl = 'https://allure.niffler-stage.qa.guru/allure-docker-service-ui/projects/niffler-ng'
             const message = exitCode == '0' ?
-              `✅ E2E TEST RUN PASSED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})` :
-              `🔴 E2E TEST RUN FAILED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})`
+              `✅ E2E TESTS PASSED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})` :
+              `🔴 E2E TESTS FAILED\nThere is the [report](${reportUrl})\nAll reports [history](${historyUrl})`
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
@@ -165,6 +165,7 @@ jobs:
           docker login --username ${{ vars.DOCKER_HUB_ACC }} --password "${{ secrets.DOCKER_HUB_PASSWORD }}"
 
       - name: build auth & deploy to staging
+        id: deploy_auth
         if: steps.changes.outputs.auth == 'true'
         working-directory: ./
         run: |
@@ -176,6 +177,7 @@ jobs:
           echo "Deploy auth to staging done!"
 
       - name: build currency & deploy to staging
+        id: deploy_currency
         if: steps.changes.outputs.currency == 'true'
         working-directory: ./
         run: |
@@ -187,6 +189,7 @@ jobs:
           echo "Deploy currency to staging done!"
 
       - name: build gateway & deploy to staging
+        id: deploy_gateway
         if: steps.changes.outputs.gateway == 'true'
         working-directory: ./
         run: |
@@ -198,6 +201,7 @@ jobs:
           echo "Deploy gateway to staging done!"
 
       - name: build spend & deploy to staging
+        id: deploy_spend
         if: steps.changes.outputs.spend == 'true'
         working-directory: ./
         run: |
@@ -209,6 +213,7 @@ jobs:
           echo "Deploy spend to staging done!"
 
       - name: build userdata & deploy to staging
+        id: deploy_userdata
         if: steps.changes.outputs.userdata == 'true'
         working-directory: ./
         run: |
@@ -220,6 +225,7 @@ jobs:
           echo "Deploy userdata to staging done!"
 
       - name: build frontend & deploy to staging
+        id: deploy_frontend
         if: steps.changes.outputs.frontend == 'true'
         working-directory: ./niffler-ng-client
         run: |
@@ -233,3 +239,39 @@ jobs:
           docker compose -f docker-compose.ci.yml stop frontend.niffler.dc && docker compose -f docker-compose.ci.yml up -d --no-deps frontend.niffler.dc
           docker system prune -a -f
           echo "Deploy frontend to staging done!"
+
+      - name: Generate deployment summary
+        if: always()
+        run: |
+          echo "## Deployment Summary" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Service | Status | Version |" >> $GITHUB_STEP_SUMMARY
+          echo "|---------|--------|---------|" >> $GITHUB_STEP_SUMMARY
+          
+          # Function to add service status to summary
+          add_service_status() {
+            local service_name=$1
+            local changes_output=$2
+            local deploy_step=$3
+            local version_var=$4
+            
+            if [[ "$changes_output" == "true" ]]; then
+              if [[ "${{ steps.$deploy_step.outcome }}" == "success" ]]; then
+                echo "| $service_name | ✅ Passed | $version_var |" >> $GITHUB_STEP_SUMMARY
+              else
+                echo "| $service_name | 🔴 Failed | $version_var |" >> $GITHUB_STEP_SUMMARY
+              fi
+            else
+              echo "| $service_name | Skipped | - |" >> $GITHUB_STEP_SUMMARY
+            fi
+          }
+          
+          # Add each service status to the summary
+          add_service_status "Auth" "${{ steps.changes.outputs.auth }}" "deploy_auth" "${{ env.AUTH_VER }}"
+          add_service_status "Currency" "${{ steps.changes.outputs.currency }}" "deploy_currency" "${{ env.CURRENCY_VER }}"
+          add_service_status "Gateway" "${{ steps.changes.outputs.gateway }}" "deploy_gateway" "${{ env.GATEWAY_VER }}"
+          add_service_status "Spend" "${{ steps.changes.outputs.spend }}" "deploy_spend" "${{ env.SPEND_VER }}"
+          add_service_status "Userdata" "${{ steps.changes.outputs.userdata }}" "deploy_userdata" "${{ env.USERDATA_VER }}"
+          add_service_status "Frontend" "${{ steps.changes.outputs.frontend }}" "deploy_frontend" "${{ env.FRONT_VER }}"
+          
+          echo "" >> $GITHUB_STEP_SUMMARY
