--- a/.github/workflows/versions.yml
+++ b/.github/workflows/versions.yml
@@ -22,50 +22,33 @@ jobs:
   collect-versions:
     runs-on: "${{ inputs.runner }}"
     outputs:
-      auth: ${{ steps.auth_version.outputs.auth }}
-      currency: ${{ steps.currency_version.outputs.currency }}
-      gateway: ${{ steps.gateway_version.outputs.gateway }}
-      spend: ${{ steps.spend_version.outputs.spend }}
-      userdata: ${{ steps.userdata_version.outputs.userdata }}
-      front: ${{ steps.front_version.outputs.front }}
+      auth: ${{ steps.all_versions.outputs.auth }}
+      currency: ${{ steps.all_versions.outputs.currency }}
+      gateway: ${{ steps.all_versions.outputs.gateway }}
+      spend: ${{ steps.all_versions.outputs.spend }}
+      userdata: ${{ steps.all_versions.outputs.userdata }}
+      front: ${{ steps.all_versions.outputs.front }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Retrieve niffler-client version
-        id: front_version
+      - name: Retrieve versions for all modules
+        id: all_versions
         run: |
+          set -euo pipefail
+          ./gradlew printAllVersions -q --console=plain -Dorg.gradle.warning.mode=none
           FRONT_VERSION=$(jq -r '.version' niffler-ng-client/package.json)
-          echo "front=$FRONT_VERSION" >> $GITHUB_OUTPUT
-      - name: Retrieve niffler-auth version
-        run: |
-          AUTH_VERSION=$(bash ./gradlew :niffler-auth:printVersion -q)
-          echo "auth=$AUTH_VERSION" >> $GITHUB_OUTPUT
-        id: auth_version
-      - name: Retrieve niffler-currency version
-        run: |
-          CURRENCY_VERSION=$(bash ./gradlew :niffler-currency:printVersion -q)
-          echo "currency=$CURRENCY_VERSION" >> $GITHUB_OUTPUT
-        id: currency_version
-      - name: Retrieve niffler-gateway version
-        run: |
-          GATEWAY_VERSION=$(bash ./gradlew :niffler-gateway:printVersion -q)
-          echo "gateway=$GATEWAY_VERSION" >> $GITHUB_OUTPUT
-        id: gateway_version
-      - name: Retrieve niffler-spend version
-        run: |
-          SPEND_VERSION=$(bash ./gradlew :niffler-spend:printVersion -q)
-          echo "spend=$SPEND_VERSION" >> $GITHUB_OUTPUT
-        id: spend_version
-      - name: Retrieve niffler-userdata version
-        run: |
-          USERDATA_VERSION=$(bash ./gradlew :niffler-userdata:printVersion -q)
-          echo "userdata=$USERDATA_VERSION" >> $GITHUB_OUTPUT
-        id: userdata_version
+          echo "front=$FRONT_VERSION" >> "$GITHUB_OUTPUT"
       - name: Summary info
         run: |
-          echo "### niffler-auth version will be used: ${{ steps.auth_version.outputs.auth }}"
-          echo "### niffler-currency version will be used: ${{ steps.currency_version.outputs.currency }}"
-          echo "### niffler-gateway version will be used: ${{ steps.gateway_version.outputs.gateway }}"
-          echo "### niffler-spend version will be used: ${{ steps.spend_version.outputs.spend }}"
-          echo "### niffler-userdata version will be used: ${{ steps.userdata_version.outputs.userdata }}"
-          echo "### niffler-client version will be used: ${{ steps.front_version.outputs.front }}"
+          {
+            echo "## Versions Summary"
+            echo
+            echo "| Service | Version |"
+            echo "|---|---|"
+            echo "| niffler-auth | ${{ steps.all_versions.outputs.auth }} |"
+            echo "| niffler-currency | ${{ steps.all_versions.outputs.currency }} |"
+            echo "| niffler-gateway | ${{ steps.all_versions.outputs.gateway }} |"
+            echo "| niffler-spend | ${{ steps.all_versions.outputs.spend }} |"
+            echo "| niffler-userdata | ${{ steps.all_versions.outputs.userdata }} |"
+            echo "| niffler-client | ${{ steps.all_versions.outputs.front }} |"
+          } >> "$GITHUB_STEP_SUMMARY"
